# colab-gsoc2015-VehicleCounter

./: CMakeLists.txt  README.md
interfaces/slice/jderobot/: heatmap.ice  image.ice
plugins/: CMakeLists.txt  carplugin.cc
src/WearClient/mobile/: build.gradle
src/WearClient/mobile/src/androidTest/java/org/jderobot/test/wearclient/: ApplicationTest.java
src/WearClient/mobile/src/main/: AndroidManifest.xml
src/WearClient/mobile/src/main/java/jderobot/: Callback_Heatmap_getDronePose.java  Callback_Heatmap_getHeatmapInfo.java  Heatmap.java  HeatmapDataHolder.java  HeatmapInfoPrxHolder.java  HeatmapPrx.java  _HeatmapDataDel.java  _HeatmapDataDelD.java  _HeatmapDel.java  _HeatmapDelD.java  _HeatmapDelM.java  _HeatmapDisp.java  _HeatmapOperationsNC.java  _Pose3DDelD.java  _Pose3DDisp.java  _checkpointDel.java  _checkpointDelD.java  _checkpointDelM.java  checkpointListHelper.java  checkpointPrx.java  checkpointPrxHelper.java
src/WearClient/mobile/src/main/java/org/jderobot/test/wearclient/: HeatmapData.java  HeatmapInfo.java  MainActivity.java  StartActivity.java
src/WearClient/mobile/src/main/res/layout/: activity_main.xml  activity_start.xml
src/WearClient/mobile/src/main/res/values/: strings.xml
src/WearClient/wear/: build.gradle  proguard-rules.pro
src/WearClient/wear/src/main/: AndroidManifest.xml
src/WearClient/wear/src/main/java/jderobot/: Callback_Heatmap_getHeatmapData.java  HeatmapData.java  HeatmapDataPrx.java  HeatmapDataPrxHelper.java  HeatmapDataPrxHolder.java  HeatmapHolder.java  HeatmapInfo.java  HeatmapInfoHolder.java  HeatmapInfoPrx.java  HeatmapInfoPrxHelper.java  HeatmapPrxHelper.java  HeatmapPrxHolder.java  _HeatmapDataDelM.java  _HeatmapDelD.java  _HeatmapDisp.java  _HeatmapInfoDel.java  _HeatmapInfoDelD.java  _HeatmapInfoDelM.java  _HeatmapOperations.java  checkpoint.java  checkpointHolder.java  checkpointListHolder.java  checkpointPrxHolder.java
src/WearClient/wear/src/main/java/org/jderobot/test/wearclient/: Constants.java  HeatmapInfo.java  ListenerService.java  MainActivity.java
src/WearClient/wear/src/main/res/layout/: round_activity_main.xml
src/WearClient/wear/src/main/res/values/: strings.xml
src/WearClient/wear/src/main/slice/: heatmap.ice
src/WearTeleoperator/mobile/: build.gradle
src/WearTeleoperator/mobile/src/androidTest/java/org/jderobot/wearteleoperator/: ApplicationTest.java
src/WearTeleoperator/mobile/src/main/: AndroidManifest.xml
src/WearTeleoperator/mobile/src/main/java/org/jderobot/wearteleoperator/: Constants.java  ListenerService.java  MainActivity.java  StartActivity.java
src/WearTeleoperator/mobile/src/main/res/layout/: activity_main.xml  activity_start.xml
src/WearTeleoperator/mobile/src/main/res/values/: strings.xml
src/WearTeleoperator/wear/: build.gradle
src/WearTeleoperator/wear/src/main/: AndroidManifest.xml
src/WearTeleoperator/wear/src/main/java/org/jderobot/wearteleoperator/: Constants.java  ImageListenerService.java  MainActivity.java  MyButton.java
src/WearTeleoperator/wear/src/main/res/layout/: activity_test.xml  round_activity_main.xml
src/WearTeleoperator/wear/src/main/res/values/: strings.xml
src/vehicleCounter/: CMakeLists.txt  vehicleCounter.cfg  vehicleCounter.cpp
worlds/: ArDrone_simple-gsoc.world  ArDrone_texture-gsoc.world
